--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -11,3 +11,75 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
   monospace;
 }
+
+.app-container{
+  
+  .login-container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;  //trick để căn giữa cho login-container
+
+    .title{
+      text-align: center;
+      font-size: 30px;
+      font-weight: 600;
+      padding-top: 30px;
+      padding-bottom: 20px;
+    }
+
+    .text{
+      font-weight: 600;
+      padding-bottom: 3px;
+      font-size: 15px;
+    }
+
+    input{
+      padding: 11px 5px;
+      outline: none;
+      margin-bottom: 10px;
+      background-color: #1618230f;
+      border:2px solid #1618230f;
+      border-radius: 3px;
+      width: 100%;
+
+      &:hover{
+        background-color: #dedede;
+      }
+    }
+
+    .input-2{
+      position: relative;
+      i{
+        position: absolute;
+        top: 17px;
+        right: 10px;
+        cursor: pointer;
+      }
+    }
+
+    button{
+      margin-top: 15px;
+      padding: 11px;
+      outline: none;
+      border: none;
+      background-color: #1618230f;
+    
+      
+
+      &.active{
+        background-color: #fe2c55;
+        color: white;
+      }
+    }
+
+    button[disabled=disabled], button:disabled{
+      cursor: not-allowed;
+    }
+
+    .back{
+      text-align: center;
+      margin-top: 30px;
+      cursor: pointer;
+    }
+  }
+}
